--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 .container {
     background-color: #f0e8ca;
+   
 }
 
 body {
@@ -9,16 +10,21 @@ body {
     border: 0px;
 }
 
-header {
-    
+.header {
+    background-color: #f0e8ca;
 }
 
 h1 {
     text-align: center;
+    font-family: calibri;
+    font-weight: bold;
+    padding-bottom: 50px;
 }
 
 p {
     text-align: center;
+    padding-bottom: 50px;
+    font-size: large;
 }
 
 #welcome {
@@ -30,7 +36,7 @@ p {
 /* Style the navigation menu */
 .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: #f0e8ca;
     position: right;
   }
   
@@ -59,12 +65,48 @@ p {
   
   /* Add a grey background color on mouse-over */
   .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: #f0e8ca;
+    color: #ec7729;
   }
   
   /* Style the active link (or home/logo) */
-  .active {
+  /* .active {
     background-color: #04AA6D;
     color: white;
-  }
+  } */
+
+  /* -------FOOTER NAVBAR-----------------*/
+
+  /* Place the navbar at the bottom of the page, and make it stick */
+.footnav {
+  background-color: green;
+   overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+/* Style the links inside the navigation bar */
+.footnav a {
+  float: center;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-weight: bold;
+  border-bottom: 1px solid white;
+}
+
+/* Change the color of links on hover */
+.footnav a:hover {
+  background-color: red;
+  color: white;
+}
+
+/* Add a color to the active/current link */
+/* .footnav a.active {
+  background-color: green;
+  color: white;
+} */
